@@ -50,6 +50,7 @@
  *  2004-05-03  applied multicast support patch from janakj
  *              added MCAST_TTL (andrei)
  *  2004-10-08  more escapes: \", \xHH, \nnn and minor optimizations (andrei)
+ *  2004-10-19  added FROM_URI and TO_URI (andrei)
  */
 
 
@@ -143,6 +144,8 @@ METHOD	method
    call it "uri" from route{} and status from onreply_route{}
 */
 URI		"uri"|"status"
+FROM_URI	"from_uri"
+TO_URI		"to_uri"
 SRCIP	src_ip
 SRCPORT	src_port
 DSTIP	dst_ip
@@ -326,6 +329,8 @@ EAT_ABLE	[\ \t\b\r]
 
 <INITIAL>{METHOD}	{ count(); yylval.strval=yytext; return METHOD; }
 <INITIAL>{URI}	{ count(); yylval.strval=yytext; return URI; }
+<INITIAL>{FROM_URI}	{ count(); yylval.strval=yytext; return FROM_URI; }
+<INITIAL>{TO_URI}	{ count(); yylval.strval=yytext; return TO_URI; }
 <INITIAL>{SRCIP}	{ count(); yylval.strval=yytext; return SRCIP; }
 <INITIAL>{SRCPORT}	{ count(); yylval.strval=yytext; return SRCPORT; }
 <INITIAL>{DSTIP}	{ count(); yylval.strval=yytext; return DSTIP; }
